# stochastic_superhuman_fairness

./: README.md  pyproject.toml
stochastic_superhuman_fairness/: .coverage
stochastic_superhuman_fairness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stochastic_superhuman_fairness/configs/: compass.yaml  default.yaml
stochastic_superhuman_fairness/core/: 3  data_defaults.py  dataset_utils.py  demonstrator.py  demonstrator_backup.py  learner.py  learner_old.py  logger.py  qp_solver.py  rollout_utils.py  utils.py  utils_io.py
stochastic_superhuman_fairness/core/fairness/: compute_fairness_utils.py  fairness_metrics.py  subdominance.py
stochastic_superhuman_fairness/core/models/: base_model.py  bayesian_logistic.py  logistic.py  mlp.py  model_io_utils.py  ppo.py  registry.py  stochastic_mixin.py  utils.py
stochastic_superhuman_fairness/core/plotting/: plot_utils.py  rollout_plots.py
stochastic_superhuman_fairness/data/adult/: adult_demo_size10000_globTrue_normTrue_sample1.npz  adult_demo_size1000_globTrue_normFalse_sample1.npz  adult_demo_size1000_globTrue_normTrue_sample1.npz  adult_demo_size100_globTrue_normTrue_sample1.npz  adult_demo_size50_globTrue_normFalse_meta.json  adult_demo_size50_globTrue_normFalse_sample1.npz  adult_demo_size50_globTrue_normFalse_sample1_meta.json  adult_demo_size50_globTrue_normFalse_sample2.npz  adult_demo_size50_globTrue_normFalse_sample2_meta.json  adult_raw.csv
stochastic_superhuman_fairness/scripts/: build_lr_demos.py  load_model_from_zip.py  plot_rollouts_from_zip.py  run_experiment.py
stochastic_superhuman_fairness/tests/core/: test_dataset_utils.py  test_demonstrator_io.py  test_logistic_model_train.py
